<resources>
    <string name="app_name">GoalApp</string>
    <string name="facebook_application_id" translatable="false">569056483454996</string>
    <string name="TextView_usernameField">username</string>
    <string name="TextView_passwordField">password</string>
    <string name="Button_login">Login</string>
    <string name="TextView_Display">your username</string>
    <string name="Button_addGoal"></string>
    <string name="sign_in_button">Login</string>
    <string name="title_activity_create_goal">createGoal</string>
    <string name="action_settings">Settings</string>
    <string name="goal">Goal</string>
    <string name="what_goal_would_you_like_to_set">What Goal would you like to set?</string>
    <string name="set_a_goal">Set a Goal</string>
    <string name="what_are_your_start_and_end_values">What are your start and end values?</string>
    <string name="_0">0</string>
    <string name="to">To</string>
    <string name="_100">100</string>
    <string name="why_do_you_want_to_complete_this_goal">Why do you want to complete this goal?</string>
    <string name="why">Why?</string>
    <string name="add_goal">Add Goal</string>
    <string name="cancel">Cancel</string>
    <string name="sign_out_button">Sign Out</string>
    <string name="goalapp">GoalApp</string>
    <string name="an_app_for_those_that_do">An App for those that do</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
</resources>

