<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.zachheiner.goalapp.GoalWindow">

    <TextView
        android:id="@+id/GoalName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="GoalName"
        android:textColor="@color/colorPrimary"
        android:textSize="42sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <SeekBar
            android:id="@+id/goalBar7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="136dp"
            android:max="100"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:progress="50"
            android:progressDrawable="@drawable/progress_drawable"
            android:thumb="@drawable/thumb_drawable"
            android:thumbOffset="0dp" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="66dp"
            android:layout_height="43dp"
            android:layout_below="@+id/goalBar7"
            android:layout_marginTop="42dp"
            android:layout_toStartOf="@+id/textView7"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/_0"
            android:inputType="number"
            android:labelFor="@+id/goalBegin"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="66dp"
            android:layout_height="43dp"
            android:layout_alignBaseline="@+id/editText2"
            android:layout_alignBottom="@+id/editText2"
            android:layout_toEndOf="@+id/textView7"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/_100"
            android:inputType="number"
            android:labelFor="@+id/goalEnd"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="44dp"
            android:layout_height="26dp"
            android:layout_alignBaseline="@+id/editText2"
            android:layout_alignBottom="@+id/editText2"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif"
            android:text="@string/to"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView10"
            app:layout_constraintEnd_toStartOf="@+id/goalEnd"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toEndOf="@+id/goalBegin" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="115dp"
        android:layout_height="54dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="196dp"
        android:fontFamily="sans-serif"
        android:text="Journal"
        android:textColor="@color/colorPrimary"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GoalName"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="368dp"
        android:layout_height="201dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="textLongMessage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
